--- a/main.ipynb
+++ b/main.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# Car dataset classification\n",
-    "Ivan Kakhaev 0860838 \n",
+    "Ivan Kakhaev 0860838   \n",
+    "This file origin [github.](https://github.com/veax-void/stanford_car_classification/blob/main/main.ipynb)\n",
     "## 0. Setup\n",
     "First of all load necessary libs and set all necessary hyperparameters.\n"
    ]
@@ -434,23 +435,6 @@
     "\n",
     "    model._fc = torch.nn.Linear(model._fc.in_features, n_classes)\n",
     "    return model\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# n_classes = np.unique(train_targets).size\n",
-    "\n",
-    "# model = get_model(n_classes)\n",
-    "# # model.cuda()\n",
-    "# print('done.')"
    ]
   },
   {
