--- a/Car dataset classification.ipynb
+++ b/Car dataset classification.ipynb
@@ -4,10 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Car dataset classification\n",
     "Ivan Kakhaev 0860838   \n",
-    "This file origin [github.](https://github.com/veax-void/stanford_car_classification/blob/main/main.ipynb)\n",
-    "## 0. Setup\n",
+    "This file origin [github.](https://github.com/veax-void/stanford_car_classification/blob/main/main.ipynb)  \n",
+    "  \n",
+    "Summary of my approach:  \n",
+    "Train different models on k-fold cross validation with varius augmintations.  \n",
+    "Then use those models for predicting test data using Test time augmintation starategy, take mean of their predictions and submit it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup\n",
     "First of all load necessary libs and set all necessary hyperparameters.\n"
    ]
   },
@@ -68,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Data preparing\n",
+    "## Data preparing\n",
     "I load the data and check that my labels and images in right order."
    ]
   },
@@ -448,12 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1906,7 +1910,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TEST data prediction \n",
+    "# Test data prediction \n",
     "For test data prediction I use \"Test Time Augmentation\" strategy. First prediction I did for all K-Fold models without any augmentations. And then *n_TTA* times I get predictions for all models woth augmentations. Then I collect all outputs and take avarage of all predictions from all models."
    ]
   },
